added open editor option, added README and LICENSE

--- a/ScreenCatch/App.config
+++ b/ScreenCatch/App.config
@@ -19,17 +19,29 @@
             <setting name="CursorAreaH" serializeAs="String">
                 <value>32</value>
             </setting>
-            <setting name="Shurtcut_PrtSc" serializeAs="String">
+            <setting name="Action_PrtSc" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="Shurtcut_Alt_PrtSc" serializeAs="String">
+            <setting name="Action_Alt_PrtSc" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="Shurtcut_Shift_PrtSc" serializeAs="String">
+            <setting name="Action_Shift_PrtSc" serializeAs="String">
                 <value>2</value>
             </setting>
-            <setting name="Shurtcut_Alt_Shift_PrtSc" serializeAs="String">
+            <setting name="Action_Alt_Shift_PrtSc" serializeAs="String">
                 <value>3</value>
+            </setting>
+            <setting name="OpenEditor_PrtSc" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OpenEditor_Alt_PrtSc" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OpenEditor_Shift_PrtSc" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="OpenEditor_Alt_Shift_PrtSc" serializeAs="String">
+                <value>False</value>
             </setting>
         </ScreenCatch.Properties.Settings>
     </userSettings>
